--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,39 +1,47 @@
 body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 h1, h2, h3, h4, a {
   margin: 0;
   padding: 0;
   text-decoration: none;
-  color: inherit; }
+  color: inherit;
+}
 
 ::-webkit-scrollbar {
-  width: .5vw;
-  background: transparent; }
+  width: 0.5vw;
+  background: transparent;
+}
 
 ::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.1); }
+  background: rgba(0, 0, 0, 0.1);
+}
 
 ::-webkit-scrollbar-thumb {
   border-radius: 1vw;
-  background: rgba(0, 0, 0, 0.4); }
+  background: rgba(0, 0, 0, 0.4);
+}
 
 /* particles js stuff */
 .particles-js-canvas-el {
-  grid-column: 1 / 8;
-  grid-row: 1 / 13; }
+  grid-column: 1/8;
+  grid-row: 1/13;
+}
 
 .home-container {
   height: 100vh;
   perspective: 20px;
   overflow: scroll;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 .scroll-content {
   position: relative;
-  transform-style: preserve-3d; }
+  transform-style: preserve-3d;
+}
 
 /*landing screen*/
 .landing-container {
@@ -42,213 +50,256 @@ h1, h2, h3, h4, a {
   grid-template-rows: repeat(12, 8.33%);
   height: 170vh;
   width: 100%;
-  position: relative; }
-  .landing-container .particlejs-background {
-    display: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    grid-column: 1 / 9;
-    grid-row: 1 / 13; }
-  .landing-container .landing-text {
-    margin-left: 4vw;
-    font-family: raleway_regular;
-    font-size: 7em;
-    grid-column: span 5;
-    grid-row: 3;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    z-index: 10; }
-  .landing-container .fixed-animating-objects {
-    position: absolute;
-    grid-column: span 8;
-    grid-row: span 12;
-    display: flex;
-    height: 100%;
-    width: 100%; }
-    .landing-container .fixed-animating-objects .mm {
-      position: absolute;
-      width: 28vw;
-      height: 32vw;
-      overflow: hidden; }
-      .landing-container .fixed-animating-objects .mm .parallax-img-container {
-        position: relative;
-        height: 32vw;
-        transform-style: preserve-3d; }
-        .landing-container .fixed-animating-objects .mm .parallax-img-container img {
-          position: relative;
-          height: 100%;
-          filter: grayscale(100%);
-          transform-origin: 50% 50%;
-          transform: translateZ(-5px) scale(1.25); }
-    .landing-container .fixed-animating-objects .mm1 {
-      left: 72vw;
-      top: 20%; }
-    .landing-container .fixed-animating-objects .mm2 {
-      left: 32vw;
-      top: 65%; }
-    .landing-container .fixed-animating-objects .mm3 {
-      left: 0vw;
-      top: 50%; }
+  position: relative;
+}
+.landing-container .particlejs-background {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  grid-column: 1/9;
+  grid-row: 1/13;
+}
+.landing-container .landing-text {
+  margin-left: 4vw;
+  font-family: raleway_regular;
+  font-size: 7em;
+  grid-column: span 5;
+  grid-row: 3;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  z-index: 10;
+}
+.landing-container .fixed-animating-objects {
+  position: absolute;
+  grid-column: span 8;
+  grid-row: span 12;
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+.landing-container .fixed-animating-objects .mm {
+  position: absolute;
+  width: 28vw;
+  height: 32vw;
+  overflow: hidden;
+}
+.landing-container .fixed-animating-objects .mm .parallax-img-container {
+  position: relative;
+  height: 32vw;
+  transform-style: preserve-3d;
+}
+.landing-container .fixed-animating-objects .mm .parallax-img-container img {
+  position: relative;
+  height: 100%;
+  filter: grayscale(100%);
+  transform-origin: 50% 50%;
+  transform: translateZ(-5px) scale(1.25);
+}
+.landing-container .fixed-animating-objects .mm1 {
+  left: 72vw;
+  top: 20%;
+}
+.landing-container .fixed-animating-objects .mm2 {
+  left: 32vw;
+  top: 65%;
+}
+.landing-container .fixed-animating-objects .mm3 {
+  left: 0vw;
+  top: 50%;
+}
 
 .our-services {
   width: 100vw;
   height: 100vh;
   display: grid;
   grid-template-columns: repeat(12, calc(100%/12));
-  grid-template-rows: repeat(8, calc(100%/8)); }
-  .our-services .skills-container {
-    position: relative;
-    grid-row: 3 / 8;
-    grid-column: 4;
-    min-width: 20em;
-    font-family: quicksand_light; }
-    .our-services .skills-container li {
-      list-style-type: none; }
-    .our-services .skills-container .skill-container-title {
-      font-size: 1.4em;
-      padding-bottom: 1.5em; }
-    .our-services .skills-container .skill {
-      position: relative;
-      font-size: 1.5em;
-      padding-bottom: .1em;
-      max-height: 1.7em;
-      overflow: hidden;
-      transition: .6s;
-      cursor: pointer;
-      transition-timing-function: ease-in-out; }
-    .our-services .skills-container .skill:hover {
-      max-height: 13em; }
-    .our-services .skills-container .skill-list li:before {
-      margin-top: .5em;
-      position: absolute;
-      margin-left: -1em;
-      height: 2px;
-      width: 9px;
-      background: black;
-      content: '';
-      transition: .2s; }
-    .our-services .skills-container .skill-list li:hover:before {
-      margin-left: .2em; }
-  .our-services .tech-container {
-    grid-row: 3;
-    grid-column: 7 / 9;
-    width: 15em;
-    font-family: quicksand_light;
-    font-size: 1.4em; }
-    .our-services .tech-container .tech-container-title {
-      font-family: raleway_regular;
-      padding-bottom: .5em; }
-    .our-services .tech-container .text {
-      font-family: quicksand_regular;
-      font-size: 0.85em; }
-    .our-services .tech-container .more {
-      position: relative; }
-      .our-services .tech-container .more span {
-        padding-left: 1.5em; }
-    .our-services .tech-container .more:before {
-      position: absolute;
-      height: 100%;
-      width: 1px;
-      background: black;
-      content: '';
-      transition: .1s; }
-    .our-services .tech-container .more:hover:before {
-      width: 7px; }
+  grid-template-rows: repeat(8, calc(100%/8));
+}
+.our-services .skills-container {
+  position: relative;
+  grid-row: 3/8;
+  grid-column: 4;
+  min-width: 20em;
+  font-family: quicksand_light;
+}
+.our-services .skills-container li {
+  list-style-type: none;
+}
+.our-services .skills-container .skill-container-title {
+  font-size: 1.4em;
+  padding-bottom: 1.5em;
+}
+.our-services .skills-container .skill {
+  position: relative;
+  font-size: 1.5em;
+  padding-bottom: 0.1em;
+  max-height: 1.7em;
+  overflow: hidden;
+  transition: 0.6s;
+  cursor: pointer;
+  transition-timing-function: ease-in-out;
+}
+.our-services .skills-container .skill:hover {
+  max-height: 13em;
+}
+.our-services .skills-container .skill-list li:before {
+  margin-top: 0.5em;
+  position: absolute;
+  margin-left: -1em;
+  height: 2px;
+  width: 9px;
+  background: black;
+  content: "";
+  transition: 0.2s;
+}
+.our-services .skills-container .skill-list li:hover:before {
+  margin-left: 0.2em;
+}
+.our-services .tech-container {
+  grid-row: 3;
+  grid-column: 7/9;
+  width: 15em;
+  font-family: quicksand_light;
+  font-size: 1.4em;
+}
+.our-services .tech-container .tech-container-title {
+  font-family: raleway_regular;
+  padding-bottom: 0.5em;
+}
+.our-services .tech-container .text {
+  font-family: quicksand_regular;
+  font-size: 0.85em;
+}
+.our-services .tech-container .more {
+  position: relative;
+}
+.our-services .tech-container .more span {
+  padding-left: 1.5em;
+}
+.our-services .tech-container .more:before {
+  position: absolute;
+  height: 100%;
+  width: 1px;
+  background: black;
+  content: "";
+  transition: 0.1s;
+}
+.our-services .tech-container .more:hover:before {
+  width: 7px;
+}
 
 .previous-projects {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); }
-  .previous-projects .headline {
-    grid-column: span 3;
-    display: flex;
-    justify-content: center;
-    font-family: quicksand_light;
-    font-size: 1em;
-    padding: 1em;
-    margin-bottom: 7vw; }
-  .previous-projects .projects {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    grid-column: span 3; }
-    .previous-projects .projects .project {
-      margin-top: -5vw;
-      position: relative;
-      grid-column: span 3;
-      display: grid;
-      height: 31vw;
-      grid-template-columns: repeat(20, calc(100%/20));
-      grid-template-rows: repeat(3, calc(100%/3)); }
-      .previous-projects .projects .project .project-thumbnail {
-        position: relative;
-        display: flex;
-        width: 100%;
-        height: 31vw;
-        overflow: hidden;
-        background: black;
-        grid-row: 1 / 3; }
-        .previous-projects .projects .project .project-thumbnail .parallax-img-container {
-          position: relative;
-          width: 100%;
-          height: 100%;
-          transform-style: preserve-3d; }
-          .previous-projects .projects .project .project-thumbnail .parallax-img-container img {
-            position: relative;
-            width: 100%;
-            transform-origin: 50% 50%;
-            transform: translateZ(-5px) scale(1.4); }
-      .previous-projects .projects .project .spacer {
-        background: black;
-        width: 1px;
-        height: 100%;
-        grid-column: 10 / 12;
-        justify-self: center; }
-        .previous-projects .projects .project .spacer:nth-child(1) {
-          grid-row: 1 / 2; }
-        .previous-projects .projects .project .spacer:nth-child(2) {
-          grid-row: 3 / 4; }
-      .previous-projects .projects .project .project-name {
-        position: relative;
-        box-sizing: border-box;
-        font-family: raleway_thin;
-        font-size: 2em;
-        padding: 1vw 3vw;
-        align-self: center; }
-      .previous-projects .projects .project:nth-child(odd) .project-name {
-        grid-column: 1 / 12;
-        justify-content: left;
-        text-align: right; }
-      .previous-projects .projects .project:nth-child(odd) .project-thumbnail {
-        justify-self: right;
-        grid-column: 12 / 21; }
-      .previous-projects .projects .project:nth-child(even) .project-name {
-        grid-column: 10 / 21;
-        text-align: left; }
-      .previous-projects .projects .project:nth-child(even) .project-thumbnail {
-        justify-self: left;
-        grid-row: 1 / 1;
-        grid-column: 1 / 10; }
-    .previous-projects .projects .show-more {
-      position: relative;
-      color: black;
-      padding: 1em;
-      font-family: quicksand_medium;
-      margin-top: 1em;
-      align-self: center; }
-      .previous-projects .projects .show-more :after {
-        content: '';
-        background: black;
-        width: 100%;
-        height: 0px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        transition: .1s;
-        transition-delay: .05s; }
-      .previous-projects .projects .show-more :hover:after {
-        height: 2px; }
+  grid-template-columns: repeat(3, 1fr);
+}
+.previous-projects .headline {
+  grid-column: span 3;
+  display: flex;
+  justify-content: center;
+  font-family: quicksand_light;
+  font-size: 1em;
+  padding: 1em;
+  margin-bottom: 7vw;
+}
+.previous-projects .projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  grid-column: span 3;
+}
+.previous-projects .projects .project {
+  margin-top: -5vw;
+  position: relative;
+  grid-column: span 3;
+  display: grid;
+  height: 31vw;
+  grid-template-columns: repeat(20, calc(100%/20));
+  grid-template-rows: repeat(3, calc(100%/3));
+}
+.previous-projects .projects .project .project-thumbnail {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 31vw;
+  overflow: hidden;
+  background: black;
+  grid-row: 1/3;
+}
+.previous-projects .projects .project .project-thumbnail .parallax-img-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+.previous-projects .projects .project .project-thumbnail .parallax-img-container img {
+  position: relative;
+  width: 100%;
+  transform-origin: 50% 50%;
+  transform: translateZ(-5px) scale(1.4);
+}
+.previous-projects .projects .project .spacer {
+  background: black;
+  width: 1px;
+  height: 100%;
+  grid-column: 10/12;
+  justify-self: center;
+}
+.previous-projects .projects .project .spacer:nth-child(1) {
+  grid-row: 1/2;
+}
+.previous-projects .projects .project .spacer:nth-child(2) {
+  grid-row: 3/4;
+}
+.previous-projects .projects .project .project-name {
+  position: relative;
+  box-sizing: border-box;
+  font-family: raleway_thin;
+  font-size: 2em;
+  padding: 1vw 3vw;
+  align-self: center;
+}
+.previous-projects .projects .project:nth-child(odd) .project-name {
+  grid-column: 1/12;
+  justify-content: left;
+  text-align: right;
+}
+.previous-projects .projects .project:nth-child(odd) .project-thumbnail {
+  justify-self: right;
+  grid-column: 12/21;
+}
+.previous-projects .projects .project:nth-child(even) .project-name {
+  grid-column: 10/21;
+  text-align: left;
+}
+.previous-projects .projects .project:nth-child(even) .project-thumbnail {
+  justify-self: left;
+  grid-row: 1/1;
+  grid-column: 1/10;
+}
+.previous-projects .projects .show-more {
+  position: relative;
+  color: black;
+  padding: 1em;
+  font-family: quicksand_medium;
+  margin-top: 1em;
+  align-self: center;
+}
+.previous-projects .projects .show-more :after {
+  content: "";
+  background: black;
+  width: 100%;
+  height: 0px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: 0.1s;
+  transition-delay: 0.05s;
+}
+.previous-projects .projects .show-more :hover:after {
+  height: 2px;
+}
 
 .footer {
   margin-top: 10em;
@@ -256,61 +307,74 @@ h1, h2, h3, h4, a {
   height: 35em;
   display: grid;
   grid-template-columns: repeat(20, calc(100%/20));
-  grid-template-rows: repeat(10, calc(100%/10)); }
-  .footer .footer-back {
-    grid-column: 6 / 21;
-    grid-row: 1 / 9;
-    overflow: hidden; }
-    .footer .footer-back img {
-      width: 100%;
-      height: 100%; }
-  .footer .main-footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    font-family: borda_light;
-    max-height: 100%;
-    color: white;
-    grid-row: 3 / 11;
-    grid-column: 1 / 18;
-    background: black;
-    align-self: flex-end; }
-    .footer .main-footer .contact-info-container {
-      grid-column: 1 / 3;
-      padding: 5%;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr; }
-      .footer .main-footer .contact-info-container .info {
-        line-height: 1.5em;
-        padding: 1em; }
-        .footer .main-footer .contact-info-container .info:nth-child(odd) {
-          grid-column: 1 / 2; }
-        .footer .main-footer .contact-info-container .info h3 {
-          padding: .5em 0em; }
-    .footer .main-footer .about-us {
-      padding: 3em; }
-      .footer .main-footer .about-us .headline {
-        font-family: code_regular;
-        font-size: 3em; }
-      .footer .main-footer .about-us .description {
-        font-family: quicksand_light;
-        width: 14em;
-        font-size: 1.1em; }
-  .footer .social-links {
-    position: relative;
-    background: black;
-    grid-row: 5 / 10;
-    grid-column: 20 / 21;
-    width: 70%;
-    padding: 20% 0%;
-    justify-self: right;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around; }
-    .footer .social-links img {
-      padding: 21%;
-      width: 60%;
-      filter: invert(100%); }
+  grid-template-rows: repeat(10, calc(100%/10));
+}
+.footer .footer-back {
+  grid-column: 6/21;
+  grid-row: 1/9;
+  overflow: hidden;
+}
+.footer .footer-back img {
+  width: 100%;
+  height: 100%;
+}
+.footer .main-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  font-family: borda_light;
+  max-height: 100%;
+  color: white;
+  grid-row: 3/11;
+  grid-column: 1/18;
+  background: black;
+  align-self: flex-end;
+}
+.footer .main-footer .contact-info-container {
+  grid-column: 1/3;
+  padding: 5%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.footer .main-footer .contact-info-container .info {
+  line-height: 1.5em;
+  padding: 1em;
+}
+.footer .main-footer .contact-info-container .info:nth-child(odd) {
+  grid-column: 1/2;
+}
+.footer .main-footer .contact-info-container .info h3 {
+  padding: 0.5em 0em;
+}
+.footer .main-footer .about-us {
+  padding: 3em;
+}
+.footer .main-footer .about-us .headline {
+  font-family: code_regular;
+  font-size: 3em;
+}
+.footer .main-footer .about-us .description {
+  font-family: quicksand_light;
+  width: 14em;
+  font-size: 1.1em;
+}
+.footer .social-links {
+  position: relative;
+  background: black;
+  grid-row: 5/10;
+  grid-column: 20/21;
+  width: 70%;
+  padding: 20% 0%;
+  justify-self: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.footer .social-links img {
+  padding: 21%;
+  width: 60%;
+  filter: invert(100%);
+}
 
 /* abandoned peep's styles
 
