--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,9 +1,11 @@
 .header {
-  color: white !important; }
+  color: white !important;
+}
 
 .projects-container {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 .landing-container {
   display: grid;
@@ -14,96 +16,179 @@
   margin: 0;
   top: 0;
   background: black;
-  color: white; }
-  .landing-container .logo {
-    grid-column: 1;
-    grid-row: 2;
-    position: relative;
-    font-family: code_regular;
-    font-size: 5vw;
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center; }
-  .landing-container .headline {
-    display: flex;
-    align-items: center;
-    position: relative;
-    grid-column: 3;
-    grid-row: 2;
-    line-height: .95em;
-    font-size: 9vw;
-    font-family: rezo_zero; }
+  color: white;
+}
+.landing-container .logo {
+  grid-column: 1;
+  grid-row: 2;
+  position: relative;
+  font-family: code_regular;
+  font-size: 5vw;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.landing-container .headline {
+  display: flex;
+  align-items: center;
+  position: relative;
+  grid-column: 3;
+  grid-row: 2;
+  line-height: 0.95em;
+  font-size: 9vw;
+  font-family: rezo_zero;
+}
 
 .about-container {
   display: flex;
-  flex-direction: row; }
-  .about-container .about-img {
-    position: relative;
-    top: -20vh; }
-    .about-container .about-img img {
-      width: 35vw; }
-  .about-container .about-text {
-    position: relative;
-    width: 20em;
-    padding: 8rem 10rem; }
-    .about-container .about-text p {
-      font-family: quicksand_medium;
-      font-size: 2em;
-      width: 100%;
-      text-align: center; }
+  flex-direction: row;
+}
+.about-container .about-img {
+  position: relative;
+  top: -20vh;
+}
+.about-container .about-img img {
+  width: 35vw;
+}
+.about-container .about-text {
+  position: relative;
+  width: 20em;
+  padding: 8rem 10rem;
+}
+.about-container .about-text p {
+  font-family: quicksand_medium;
+  font-size: 2em;
+  width: 100%;
+  text-align: center;
+}
 
 .skills-pasion-container {
   display: flex;
   flex-direction: row;
-  justify-content: center; }
-  .skills-pasion-container div {
-    padding: 0em 3rem;
-    font-family: quicksand_medium;
-    width: 18rem; }
-    .skills-pasion-container div .title {
-      font-size: .9rem;
-      padding-bottom: .4rem;
-      font-family: monospace;
-      margin: .5em 0em; }
-    .skills-pasion-container div li {
-      line-height: 1.2em;
-      font-size: 1.9em;
-      list-style-type: none; }
-    .skills-pasion-container div p {
-      font-family: quicksand_regular;
-      font-size: 1.1em;
-      margin: 0; }
-
+  justify-content: center;
+}
+.skills-pasion-container div {
+  padding: 0em 3rem;
+  font-family: quicksand_medium;
+  width: 18rem;
+}
+.skills-pasion-container div .title {
+  font-size: 0.9rem;
+  padding-bottom: 0.4rem;
+  font-family: monospace;
+  margin: 0.5em 0em;
+}
+.skills-pasion-container div li {
+  line-height: 1.2em;
+  font-size: 1.9em;
+  list-style-type: none;
+}
+.skills-pasion-container div p {
+  font-family: quicksand_medium;
+  line-height: 1.4em;
+  font-size: 1.1em;
+  margin: 0;
+}
 .special-text-container {
   cursor: none;
   margin-top: 8em;
   position: relative;
   display: flex;
-  flex-direction: row; }
-  .special-text-container .anim-container {
-    z-index: 10;
-    position: absolute;
-    width: 150vw;
-    height: 100%; }
-  .special-text-container .special-img img {
-    top: 10rem;
-    z-index: 5;
-    left: 50vw;
-    transform: translateX(-50%);
-    max-width: 25rem;
-    position: absolute; }
-  .special-text-container .special-text {
-    position: relative;
-    color: #202020;
-    font-family: rezo_zero;
-    font-size: 9rem;
-    left: 50vw;
-    opacity: .3;
-    transition: .5s;
-    transition-timing-function: cubic-bezier(0.55, 0.94, 0.59, 0.49); }
-  .special-text-container .special-text-onview {
-    left: 30vw !important;
-    opacity: 1 !important; }
+  flex-direction: row;
+}
+.special-text-container .anim-container {
+  z-index: 10;
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+}
+.special-text-container .special-img {
+  position: relative;
+  left: 45vw;
+  transition: 0.5s;
+  transition-delay: 0.3s;
+  transition-timing-function: cubic-bezier(0.55, 0.94, 0.59, 0.49);
+}
+.special-text-container .special-img img {
+  top: 50%;
+  z-index: 5;
+  transform: translateX(-50%) translateY(-50%);
+  max-width: 30rem;
+  position: absolute;
+}
+.special-text-container .special-img-onview {
+  left: 0vw !important;
+}
+.special-text-container .special-text {
+  width: 65vw;
+  line-height: 1em;
+  position: relative;
+  color: #202020;
+  font-family: rezo_zero;
+  font-size: 9rem;
+  left: 50vw;
+  opacity: 0.3;
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.55, 0.94, 0.59, 0.49);
+}
+.special-text-container .special-text-onview {
+  left: 32vw !important;
+  opacity: 1 !important;
+}
+
+.post-special-text .text-container {
+  position: relative;
+  left: 50vw;
+  padding: 8em 1rem;
+  width: 18rem;
+  font-family: quicksand_medium;
+  line-height: 1.4em;
+  font-size: 1.1em;
+  margin: 0;
+}
+
+.origin-container {
+  cursor: none;
+  position: relative;
+  background: #111111;
+  color: #EEEEEE;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  overflow: hidden;
+}
+.origin-container .mouse {
+  position: absolute;
+  height: 0rem;
+  width: 0rem;
+  z-index: 5;
+  border-radius: 50%;
+  background: white;
+  mix-blend-mode: difference;
+  transform-origin: center;
+  transition: transform 0.1s;
+}
+.origin-container .mouse-onview {
+  transition: padding 0.2s;
+  padding: 2.5em;
+}
+.origin-container .origin {
+  align-self: center;
+  margin-left: 20%;
+  font-family: quicksand_medium;
+  width: 21rem;
+}
+.origin-container .origin .title {
+  font-size: 1rem;
+  padding-bottom: 0.9rem;
+  font-family: monospace;
+  margin: 0.5em 0em;
+}
+.origin-container .origin p {
+  font-family: rezo_zero;
+  font-size: 2rem;
+  margin: 0;
+}
 
 /*# sourceMappingURL=projects.css.map */
