--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -94,17 +94,10 @@
 }
 
 .special-text-container{
-    cursor: none;
     margin-top: 8em;
     position: relative;
-    display: flex;
-    flex-direction: row;
-    .anim-container{
-        z-index: 10;
-        position: absolute;
-        width: 100vw;
-        height: 100%;
-    }
+    display: none;//flex;
+    flex-direction: row;   
     .special-img{
         position: relative;
         left: 45vw;
@@ -123,6 +116,7 @@
         left: 0vw !important; 
     }
     .special-text{
+        cursor: none;
         width: 65vw;
         line-height: 1em;
         position: relative;
@@ -133,6 +127,22 @@
         opacity: .3;
         transition: .5s;
         transition-timing-function: cubic-bezier(.55,.94,.59,.49);
+        .cursor{
+            opacity: 1 !important;
+            position: absolute;
+            height: 0rem;
+            width: 0rem;
+            border-radius: 50%;
+            background: black;
+            transform-origin: center;
+            z-index: 10;
+            transform: translate(0px, 0px);
+            transition: transform .1s;
+            transition: padding .2s;
+        }
+        .cursor-onview{
+            padding: 2.5rem;
+        }
     }
     .special-text-onview{
         left: 32vw !important;
@@ -141,7 +151,7 @@
 }
 
 .post-special-text{
-    //display: none;
+    display: none;
     .text-container{
         position: relative;
         left: 50vw;
@@ -163,7 +173,7 @@
     width: 100vw;
     display: flex;
     overflow: hidden;
-    .mouse{
+    .cursor{
         position: absolute;
         height: 0rem;
         width: 0rem;
@@ -172,10 +182,11 @@
         background: white;
         mix-blend-mode: difference;
         transform-origin: center;
+        transform: translate(0px, 0px);
         transition: transform .1s;
-    }
-    .mouse-onview{
         transition: padding .2s;
+    }
+    .cursor-onview{
         padding: 2.5em;
     }
     .origin{
@@ -194,6 +205,36 @@
             font-family: rezo_zero;
             font-size: 2rem;
             margin: 0;
+        }
+    }
+}
+.team-container{
+    padding: 7rem 0rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .title{
+        font-size: 1.2em;
+        padding: 2rem 1rem;
+        width: 50rem;
+        align-self: center;
+        font-family: monospace;
+    }
+    .team-members{
+        width: 50rem;
+        align-self: center;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        .member{
+            font-size: 1rem;
+            min-width: 20rem;
+            padding-bottom: 3rem;
+            font-family: quicksand_medium;
+            .name{
+                font-family: quicksand_medium;
+                font-size: 2rem;
+            }
         }
     }
 }
