--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -61,7 +61,7 @@
         }
     }
 }
-.skills-pasion-container{
+.skills-passion-container{
     //padding: 3rem;
     display: flex;
     flex-direction: row;
