--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,10 @@
   border: 1px solid #000;
 }
 
+.is-changing{
+	display: none;
+}
+
 @mixin grid_position($start, $increment){
 	&:nth-child(1) {
    	grid-column: $start;
